2004-07-02  Derek Atkins  <derek@ihtfp.com>

	* src/gnome/dialog-print-check.c:
	* src/gnome/glade/print.glade:
	* src/scm/printing/print-check.scm:
	  Apply David Reiser's patch for Quicken(tm) cheques with stub.

	* src/engine/gnc-commodity.c:
	  Apply David Grant's patch to add TD Efunds.  Fixes #145297.

2004-06-30  Christian Stimming  <stimming@tuhh.de>

	* src/report/report-gnome/window-report.c: Add toolbar element for
	saving the current report.

	* src/report/report-system/report.scm, report-system.scm: Add
	function for saving one particular report to the
	~/.gnucash/saved-reports-1.8 file. Add extra menu only for
	customized reports.

	* src/scm/main-window.scm, src/scm/main.scm: Remove the previous
	function for saving all reports since it is no longer necessary.

2004-06-26  Derek Atkins  <derek@ihtfp.com>

	* src/gnc-module/gnc-module.scm: create (and export) a re-export macro
	  is guile doesn't already provide one.  Then re-export the symbols
	  instead of exporting them.  Fixes some deprecated guile warnings.
	* src/guile-mappings.h: convert scm_gc_{un,}protect_object() back
	  to its pre-1.6 type for earlier guiles, but upconvert to the new
	  type to fix a deprecated warning.  Note that g-wrap is still
	  outputting deprecated code.
	* lots of other files:
	  convert scm_{un,}protect_object -> scm_gc_{un,}protect_object because
	  the former is now deprecated in guile.  Fixes a bunch of
	  GUILE_WARN_DEPRECATED warnings (but probably not all of them).

2004-06-25  Derek Atkins  <derek@ihtfp.com>

	* src/engine/gnc-numeric.c: small change to the 128-bit math
	  routines to actually mark a 'carry bit' to denote numbers
	  >= 2^63 to fix bug #144980.

2004-06-24  Derek Atkins  <derek@ihtfp.com>

	* Makefile.am: be sure to rebuild make-gnucash-patch and
	  make-gnucash-potfiles when the Makefile changes (which means the
	  PERL paths might have changed).
	* src/scm/paths.scm: change the default config file to 1.9, so we